package.json à jour

--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
+  "homepage": "https://github.com/aurelienAG/gendrey-aurelien-kanap-p7.git"
+  ,
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
